Added more touches: Dockerized, created README, got working in Docker and IDE seamlessly, fleshed out OpenAPI elements